--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -13,10 +13,52 @@
 				<div class="entry-header cf">
 					<h1>{{ post.title }}</h1>
 				</div>
+			{% if post.local_post_image %}
+				<div class="post-thumb">
+                  <img src="{{ post.local_post_image.url }}" alt="post-image" title="post-image">
+               	</div>
+            {% endif %}
 				<div class="post-content">
 					<p class="lead">{{ post.text }}</p>
 				</div>
 			</article>
+			<div class="post-share">
+				<div class="social-share-block">
+				<a href="http://www.facebook.com/sharer.php?u=http://clean-mag-soratemplates.blogspot.in/2015/03/papilion-minter-savior_4.html" target="_blank">
+				<span class="share-box">
+				<i class="fa fa-facebook"></i>
+				</span>
+				</a>
+				</div>
+				<div class="social-share-block">
+				<a href="http://twitter.com/share?url=http://clean-mag-soratemplates.blogspot.in/2015/03/papilion-minter-savior_4.html" target="_blank">
+				<span class="share-box">
+				<i class="fa fa-twitter"></i>
+				</span>
+				</a>
+				</div>
+				<div class="social-share-block">
+				<a href="javascript:void((function()%7Bvar%20e=document.createElement('script');e.setAttribute('type','text/javascript');e.setAttribute('charset','UTF-8');e.setAttribute('src','http://assets.pinterest.com/js/pinmarklet.js?r='+Math.random()*99999999);document.body.appendChild(e)%7D)());" target="_blank">
+				<span class="share-box">
+				<i class="fa fa-pinterest"></i>
+				</span>
+				</a>
+				</div>
+				<div class="social-share-block">
+				<a href="https://plus.google.com/share?url=http://clean-mag-soratemplates.blogspot.in/2015/03/papilion-minter-savior_4.html" target="_blank">
+				<span class="share-box">
+				<i class="fa fa-google-plus"></i>
+				</span>
+				</a>
+				</div>
+				<div class="social-share-block">
+				<a href="http://clean-mag-soratemplates.blogspot.in/2015/03/papilion-minter-savior_4.html">
+				<span class="share-box">
+				<i class="fa fa-comment-o"></i>
+				</span>
+				</a>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
