--- a/blog/static/css/default.css
+++ b/blog/static/css/default.css
@@ -460,11 +460,11 @@ input[type="submit"],
 input[type="reset"],
 input[type="button"] {
    font: 16px/30px notosans-bold, sans-serif;
-   background: #11ABB0;
+   background: #D3D9D9;
    display: inline-block;
 	text-decoration: none;
    letter-spacing: 0;
-   color: #fff;
+   color: #000;
 	padding: 12px 24px;
 	margin-bottom: 18px;
    border: none;
@@ -488,7 +488,7 @@ button:hover,
 input[type="submit"]:hover,
 input[type="reset"]:hover,
 input[type="button"]:hover {
-   background: #3d4145;
+   background: #c9a96e;
    color: #fff;
 }
 
@@ -557,8 +557,8 @@ input[type="text"]:focus,
 input[type="password"]:focus,
 input[type="email"]:focus,
 textarea:focus {
-   color: #B3B7BC;
-	background-color: #3d4145;
+   color: #fff;
+	background-color: #c9a96e;
 }
 
 textarea { min-height: 200px; }
