--- a/blog/static/css/default.css
+++ b/blog/static/css/default.css
@@ -531,8 +531,8 @@ input[type="email"],
 textarea,
 select {
    display: block;
-   padding: 18px 15px;
-   margin: 0 0 24px 0;
+   padding: 10px;
+   margin: 0;
    border: 0;
    outline: none;
    vertical-align: middle;
@@ -557,8 +557,7 @@ input[type="text"]:focus,
 input[type="password"]:focus,
 input[type="email"]:focus,
 textarea:focus {
-   color: #fff;
-	background-color: #c9a96e;
+   color: #000;
 }
 
 textarea { min-height: 200px; }
