--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -46,6 +46,7 @@
    <script src="{% static 'js/jquery.flexslider.js' %}"></script>
    <script src="{% static 'js/doubletaptogo.js' %}"></script>
    <script src="{% static 'js/init.js' %}"></script>
+   <script src="{% static 'js/blog.js' %}" ></script>
 
 </body>
 
