--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,97 +1,87 @@
-{% extends 'blog/base.html' %} 
-{% load staticfiles %} 
+{% extends 'blog/base.html' %}
+{% load staticfiles %}
 {% block content %}
 <div class="content-outer">
-	<div id="page-content" class="row">
-		<div id="primary" class="ten offset-1 columns">
-			<article class="post">
+    <div id="page-content" class="row">
+        <div id="primary" class="ten offset-1 columns">
+            <article class="post">
                 <p class="post-meta">
                     <span class="categories">
                     <a class="enable-meta-link" href="{% url 'post_list' %}">Blog</a> /
                     <a class="disable-meta-link">{{ post.title }}</a>
                     </span>
                 </p>
-				<div class="entry-header cf">
-					<h1>{{ post.title }}</h1>
-				</div>
-			{% if post.local_post_image %}
-				<div class="post-thumb" style="background: url({{post.local_post_image.url}}) no-repeat center; height: 200px;">
-               	</div>
+                <div class="entry-header cf">
+                    <h1>{{ post.title }}</h1>
+                </div>
+            {% if post.local_post_image %}
+                <div class="post-thumb" style="background: url({{post.local_post_image.url}}) no-repeat center; height: 200px;">
+                   </div>
             {% endif %}
-				<div class="post-content">
-					<p class="lead">{{ post.text }}</p>
-				</div>
+                <div class="post-content">
+                    <p class="lead">{{ post.text }}</p>
+                </div>
             <div class="post-share">
-				<div class="social-share-block">
-				<a href="http://www.facebook.com/sharer.php?u=http://clean-mag-soratemplates.blogspot.in/2015/03/papilion-minter-savior_4.html" target="_blank">
-				<span class="share-box">
-				<i class="fa fa-facebook"></i>
-				</span>
-				</a>
-				</div>
-				<div class="social-share-block">
-				<a href="http://twitter.com/share?url=http://clean-mag-soratemplates.blogspot.in/2015/03/papilion-minter-savior_4.html" target="_blank">
-				<span class="share-box">
-				<i class="fa fa-twitter"></i>
-				</span>
-				</a>
-				</div>
-				<div class="social-share-block">
-				<a href="javascript:void((function()%7Bvar%20e=document.createElement('script');e.setAttribute('type','text/javascript');e.setAttribute('charset','UTF-8');e.setAttribute('src','http://assets.pinterest.com/js/pinmarklet.js?r='+Math.random()*99999999);document.body.appendChild(e)%7D)());" target="_blank">
-				<span class="share-box">
-				<i class="fa fa-pinterest"></i>
-				</span>
-				</a>
-				</div>
-				<div class="social-share-block">
-				<a href="https://plus.google.com/share?url=http://clean-mag-soratemplates.blogspot.in/2015/03/papilion-minter-savior_4.html" target="_blank">
-				<span class="share-box">
-				<i class="fa fa-google-plus"></i>
-				</span>
-				</a>
-				</div>
-				<div class="social-share-block">
-				<a href="http://clean-mag-soratemplates.blogspot.in/2015/03/papilion-minter-savior_4.html">
-				<span class="share-box">
-				<i class="fa fa-comment-o"></i>
-				</span>
-				</a>
-				</div>
-			</div>
-			</article>
-			<div id="comments">
+                <div class="social-share-block">
+                <a href="http://www.facebook.com/sharer.php?u=http://clean-mag-soratemplates.blogspot.in/2015/03/papilion-minter-savior_4.html" target="_blank">
+                <span class="share-box">
+                <i class="fa fa-facebook"></i>
+                </span>
+                </a>
+                </div>
+                <div class="social-share-block">
+                <a href="http://twitter.com/share?url=http://clean-mag-soratemplates.blogspot.in/2015/03/papilion-minter-savior_4.html" target="_blank">
+                <span class="share-box">
+                <i class="fa fa-twitter"></i>
+                </span>
+                </a>
+                </div>
+                <div class="social-share-block">
+                <a href="javascript:void((function()%7Bvar%20e=document.createElement('script');e.setAttribute('type','text/javascript');e.setAttribute('charset','UTF-8');e.setAttribute('src','http://assets.pinterest.com/js/pinmarklet.js?r='+Math.random()*99999999);document.body.appendChild(e)%7D)());" target="_blank">
+                <span class="share-box">
+                <i class="fa fa-pinterest"></i>
+                </span>
+                </a>
+                </div>
+                <div class="social-share-block">
+                <a href="https://plus.google.com/share?url=http://clean-mag-soratemplates.blogspot.in/2015/03/papilion-minter-savior_4.html" target="_blank">
+                <span class="share-box">
+                <i class="fa fa-google-plus"></i>
+                </span>
+                </a>
+                </div>
+                <div class="social-share-block">
+                <a href="http://clean-mag-soratemplates.blogspot.in/2015/03/papilion-minter-savior_4.html">
+                <span class="share-box">
+                <i class="fa fa-comment-o"></i>
+                </span>
+                </a>
+                </div>
+            </div>
+            </article>
+            <div id="comments">
             <h3 class="text-center">{% if post.comments.all|length == 1 %}{{  post.comments.all|length }} Comment {% else %}{{  post.comments.all|length }} Comments {% endif %}</h3>
-				<ol class="commentlist">
-				{% for comment in post.comments.all %}
+                <ol class="commentlist">
+                {% for comment in post.comments.all %}
                     {% if comment.author and comment.text %}
-					<li class="depth-1">
-						<!--{% if comment.gender == 1 %}
-						<div class="avatar">
-	                        <img width="50" height="50" class="avatar" src="{% static 'images/user-03.png' %}" alt="">
-	                    </div>
-	                    {% endif %}
-	                    {% if comment.gender == 2 %}
-	                    <div class="avatar">
-	                        <img width="50" height="50" class="avatar" src="{% static 'images/user-02.png' %}" alt="">
-	                    </div>
-	                    {% endif %}-->
-						<div class="comment-info">
-						<cite>{{ comment.author }}</cite>/<a class="enable-meta-link" href="">Reply</a>
-						<div class="comment-meta">
-						<time class="comment-time" datetime="2014-01-14T23:05">{{ comment.created_date }}</time>
-						</div>
-						</div>
-						<div class="comment-text">
-						<p>{{ comment.text }}</p>
-						</div>
-					</li>
+                    <li class="depth-1">
+                        <div class="comment-info">
+                        <cite>{{ comment.author }}</cite>/<a class="enable-meta-link" href="">Reply</a>
+                        <div class="comment-meta">
+                        <time class="comment-time" datetime="2014-01-14T23:05">{{ comment.created_date }}</time>
+                        </div>
+                        </div>
+                        <div class="comment-text">
+                        <p>{{ comment.text }}</p>
+                        </div>
+                    </li>
                     {% endif %}
-				{% empty %}
-					<li class="depth-1">
-						No comments here yet
-					</li>
-				{% endfor %}
-				</ol>
+                {% empty %}
+                    <li class="depth-1">
+                        No comments here yet
+                    </li>
+                {% endfor %}
+                </ol>
             </div>
             <div id="leave-comment">
                 <h3 class="text-center">Leave a Comment</h3>
@@ -100,42 +90,36 @@
                         {% csrf_token %}
                         <div class="cf">
                             {{ form.author }}
-                            <div class="error-block">
-                            {% if form.author.errors %}
+                            <div class="error-block author">
                                 {% for error in form.author.errors %}
                                 <div class="validation-error-triangle"></div>
                                 <div class="validation-error"><p>{{error}}</p></div>
                                 {% endfor %}
-                            {% endif %}
                             </div>
                         </div>
                         <div class="cf">
                             {{ form.gender }}
-                            <div class="error-block">
-                            {% if form.gender.errors %}
+                            <div class="error-block gender">
                                 {% for error in form.gender.errors %}
                                 <div class="validation-error-triangle"></div>
                                 <div class="validation-error"><p>{{error}}</p></div>
                                 {% endfor %}
-                            {% endif %}
                             </div>
                         </div>
                         <div class="cf">
                             {{ form.text}}
-                            <div class="error-block">
-                            {% if form.text.errors %}
+                            <div class="error-block text">
                                 {% for error in form.text.errors %}
                                 <div class="validation-error-triangle"></div>
                                 <div class="validation-error"><p>{{error}}</p></div>
                                 {% endfor %}
-                            {% endif %}
                             </div>
                         </div>
                         <button type="submit" class="submit">Submit</button>
                     </fieldset>
                 </form>
             </div>
-		</div>
-	</div>
+        </div>
+    </div>
 </div>
 {% endblock content %}
